# SkiExercise

./: README.md
api/: app.js  package-lock.json  package.json
api/routes/: testAPI.js
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
client/: .eslintcache  package-lock.json  package.json
client/public/: index.html
client/src/: App.js
client/src/components/: ByeR.js  CustomerList.js  CustomerRegistration.js  Home.js  ResortDelete.js  ResortList.js  ResortRegistration.js  ThankYouCR.js  ThankYouRR.js
