[package]
name = "backend"
version = "0.1.0"
authors = ["Gerardo Herrera <gherrerabalderrama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cstring = "0.1.1"
serde_json = "1.0"
redis = "0.19.0"

[lib]
crate-type = ["dylib"]
